2007-11-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/frame_glom.cc:
	* glom/frame_glom.h: Move dialog creation from the constructor to 
	where they are first used. This reduces start-up time slightly, and stops 
	wasting memory, at the cost of slightly (impercetible, hopefully) longer 
	time to open menus. 

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_developer.glade: Make the toolbar pack_end and non-expand 
	so that it acts as expected.
	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	Call set_default_position() with the drop coordinates, so that all items 
	are dropped at the correct place.

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	on_canvas_drag_drop(): Do not call drag_get_data(). It does not seem 
	necessary - it causes two drops to happen instead of one.

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/box_print_layouts.cc:
	on_adddel_changed();
	* glom/navigation/box_tables.cc: on_adddel_changed(): 
	Fix the rename confirmation dialog to actually have two buttons. 

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	fill_with_data(): Do not try to get data for fields that were 
	not yet chosen.

2007-11-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/Makefile.am:
	* glom/mode_design/print_layouts/action_layout_item.cc:
	* glom/mode_design/print_layouts/action_layout_item.h:
	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	Added a toolbar whose items can be dragged to the canvas.
	It is not working perfectly and it is not pretty, but it is a 
	start.

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_developer.glade:
	* glom/mode_design/print_layouts/window_print_layout_edit.cc: